Fix zoom on mobile

--- a/assets/css/default.scss
+++ b/assets/css/default.scss
@@ -44,14 +44,23 @@ body {
     position: fixed;
     overflow-y: scroll;
   }
+
+  &::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100lvw;
+    height: 100lvh;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 1;
+    pointer-events: none;
+  }
 }
 
 #body {
   position: relative;
-  min-height: 100lvh;
-  width: 100%;
   z-index: 2;
-  box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.6);
 }
 
 #page {
